# rust-tpm2

./: Cargo.toml
src/: main.rs
src/device/: raw.rs
src/tpm2/commands/: commands.rs  import.rs  load.rs  pcr.rs  pcrread.rs  pcrs.rs  run.rs  session.rs  startup.rs  unseal.rs
src/tpm2/types/: mod.rs  tcg.rs
src/tpm2/types/constants/: algid.rs  mod.rs  rc.rs  st.rs
