[package]
name = "tpm2"
version = "0.1.0"
authors = []
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.2"
bincode = "1.2.1"
bytebuffer = "0.2.0"
byteorder = "1.4.3"
cfb-mode = "0.8.2"
hex = "0.4"
hmac = "0.12.1"
mem_macros = "0.1.2"
num-traits = "0.2.15"
pem = "2.0.1"
rand = "0.8.5"
rsa = "0.8.2"
sha2 = "0.10.6"

